# genai-company-matcher

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: init_company_db.py  init_vector_db.py
src/: create_db.py  fill_company_data.py
src/cli/: main.py  test_utils.py  wikidata_test.py
src/core/: enrichment_service.py  interfaces.py  matching_service.py  models.py
src/infrastructure/: base_sqlite_repository.py  sqlite_repository.py  sqlite_wikidata_repository.py  utils.py  vector_repository.py
tests/: test_base_sqlite_repository.py  test_models.py  test_sqlite_repository.py
