[project]
name = "genai_matcher"
version = "0.1.0"
description = "A matching tool to find similar companies based on GenAI embeddings."
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "requests",
    "python-dotenv",
    "chromadb",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest",
]
