[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genai_matcher"
version = "0.1.0"
description = "A matching tool to find similar companies based on GenAI embeddings."
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "requests",
    "python-dotenv",
    "chromadb",
    "sentence-transformers",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/infrastructure", "src/cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "pytest",
]
